# bevy_jam_4

./: .gitignore  ASSETS.md  Cargo.toml  shell.nix
.github/workflows/: release.yaml
assets/enemies/: big_fridge.glb  mid_fridge.glb  small_fridge.glb
assets/minigun/: minigun.glb  minigun_shell.glb
assets/pistol/: pistol.glb  pistol_round.glb  pistol_shell.glb
assets/shotgun/: shotgun.glb  shotgun_shell.glb
src/: animation.rs  enemies.rs  hud.rs  main.rs  player.rs  utils.rs
src/damage/: mod.rs
src/enemies/: fridge.rs  mod.rs
src/level/: door.rs  generation.rs  mod.rs  portal.rs
src/ui/: game_over.rs  game_won.rs  hud.rs  main_menu.rs  mod.rs  options.rs  pause.rs  stats.rs
src/weapons/: floating.rs  mod.rs  pistol.rs
