[package]
name = "bevy_jam_4"
version = "0.6.2"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize release builds for size, use LTO
[profile.release]
opt-level = "z"
lto = "thin"
strip = "debuginfo"

[features]
default = []
dylib = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12", features = ["jpeg"] }
bevy_asset_loader = "0.18.0"
bevy_rapier3d = { version = "0.23.0", features = ["simd-stable", "debug-render"] }
rand = "0.8.5"
